<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="altitude">Altitude</string>
    <string name="lat">Latitude</string>
    <string name="a_0_00">0.00</string>
    <string name="lon">Longitude</string>
    <string name="b_0_00">0.00</string>
    <string name="c_0_00">0.00</string>
    <string name="accuracy">Accuracy</string>
    <string name="d_0_00">0.00</string>
    <string name="speed">Speed</string>
    <string name="e_0_00">0.00</string>
    <string name="sensor">Sensor</string>
    <string name="cell_tower_wifi">Cell Tower + Wifi</string>
    <string name="updates">Updates</string>
    <string name="off">Off</string>
    <string name="location_updates">Location Updates</string>
    <string name="only_gps">Only GPS</string>
    <string name="address">Address</string>
    <string name="location_information">Location Information</string>
    <string name="environmental_sensors">Environmental Sensors</string>
    <string name="motion_sensors">Motion Sensors</string>
    <string name="temp">Temperature</string>
    <string name="f_0_00">0.00</string>
    <string name="lighting">Lighting</string>
    <string name="g_0_00">0.00</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="h_0_00">0.00</string>
    <string name="humidity">Humidity</string>
    <string name="i_0_00">0.00</string>
    <string name="proximity_to_other_devices">Device Proximity</string>
    <string name="j_0_00">0.00</string>
    <string name="acceleration">Acceleration</string>
    <string name="k_0_00">0.00</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="l_0_00">0.00</string>
    <string name="other_sensors">Other Sensors</string>
    <string name="tv_AID">device android id</string>
    <string name="tv_labelAID">Android ID</string>
    <string name="tv_altitude">No Altitude Sensor</string>
    <string name="tv_speed">No Speed Sensor or no speed detected</string>
    <string name="tv_address">Unable to get address</string>
    <string name="tv_temp">Off</string>
    <string name="tv_light">Off</string>
    <string name="tv_pressure">Off</string>
    <string name="tv_humidity">Off</string>
    <string name="tv_proximity">Off</string>
    <string name="tv_accelerator">Off</string>
    <string name="tv_magnetic">Off</string>
    <string name="tv_updates">Location is NOT being tracked</string>
    <string name="tv_lat">Off</string>
    <string name="tv_lon">Off</string>
    <string name="tv_accuracy">Off</string>
    <string name="tv_labelAAID">Advertising ID</string>
    <string name="tv_AAID">AAID</string>
    <string name="tv_labelAID2">Device ID</string>
    <string name="sw_id">Get Android Ad ID</string>
    <string name="sw_getData">Show the Data</string>
    <string name="sw_readFile">Read the File</string>
    <string name="tv_notice">Don\'t turn this on for now</string>
    <string name="tv_directions">**Use these buttons at the end**</string>
    <string name="b_close">X</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_id">Identifiers</string>
    <string name="title_data">Data</string>
    <string name="tv_emptyData"> </string>
    <string name="loadData">Load</string>
    <string name="send_the_data">Send the Data</string>
    <string name="read_the_data">Read the Data</string>
    <string name="android_id">Android ID</string>
    <string name="gps">GPS</string>
    <string name="bs">BS</string>
    <string name="h_accuracy">H Accuracy</string>
    <string name="v_accuracy">V Accuracy</string>
    <string name="_0_0">0.0</string>
</resources>