<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id='@+id/cl_id'
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:shrinkColumns="0"
        android:stretchColumns="1"
        android:isScrollContainer="true">

    <TableRow>
        <androidx.appcompat.widget.SwitchCompat
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/sw_locationsupdates"
            android:checked="true"
            android:text="@string/location_updates"
            android:layout_span="2" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labellat"
            android:text="@string/lat" />

        <TextView
            android:id="@+id/tv_lat"
            android:text="@string/a_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labellon"
            android:text="@string/lon" />

        <TextView
            android:id="@+id/tv_lon"
            android:text="@string/b_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelaltitude"
            android:text="@string/altitude" />

        <TextView
            android:id="@+id/tv_altitude"
            android:text="@string/c_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelaccuracy"
            android:text="@string/accuracy" />

        <TextView
            android:id="@+id/tv_accuracy"
            android:text="@string/d_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelspeed"
            android:text="@string/speed" />

        <TextView
            android:id="@+id/tv_speed"
            android:text="@string/e_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/address" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_span="2" />
    </TableRow>

    <TableRow>
        <androidx.appcompat.widget.SwitchCompat
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/sw_sensors"
            android:checked="true"
            android:text="@string/title_sensors"
            android:layout_span="2" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labeltemp"
            android:text="@string/temp" />

        <TextView
            android:id="@+id/tv_temp"
            android:text="@string/f_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labellight"
            android:text="@string/lighting" />

        <TextView
            android:id="@+id/tv_light"
            android:text="@string/g_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelpressure"
            android:text="@string/air_pressure" />

        <TextView
            android:id="@+id/tv_pressure"
            android:text="@string/h_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_lablehumidty"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/tv_humidity"
            android:text="@string/i_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:paddingRight="16dp"
            android:id="@+id/tv_labelproximity"
            android:text="@string/proximity_to_other_devices" />

        <TextView
            android:id="@+id/tv_proximity"
            android:text="@string/j_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelaccel"
            android:text="@string/acceleration" />

        <TextView
            android:id="@+id/tv_accelerator"
            android:text="@string/k_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_lablemag"
            android:text="@string/magnetic_field" />

        <TextView
            android:id="@+id/tv_magnetic"
            android:text="@string/l_0_00" />
    </TableRow>

    <TableRow>
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:id="@+id/title_id"
            android:text="@string/title_id"
            android:paddingTop="16dp"
            android:layout_span="2" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelAID"
            android:text="@string/tv_labelAID2" />

        <TextView
            android:id="@+id/tv_AID"
            android:text="@string/tv_AID" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/tv_labelAAID"
            android:text="@string/tv_labelAAID" />

        <TextView
            android:id="@+id/tv_AAID"
            android:text="@string/tv_AAID" />
    </TableRow>


    <TableRow>
        <Button
            android:id="@+id/b_readFile"
            android:checked="false"
            android:text="@string/sw_readFile"
            android:layout_span="2" />
    </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tv_data"
                android:text=""
                />
        </TableRow>


    </TableLayout>
</ScrollView>